p2/configs/deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers: 
        - name: app1
          image: byjg/static-httpserver
          ports:
          - containerPort: 8080
