p2/configs/deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers: 
        - name: app2
          image: byjg/static-httpserver
          ports:
          - containerPort: 8080
