p2/configs/deployment-app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers: 
        - name: app3
          image: byjg/static-httpserver
          ports:
          - containerPort: 8080
