p2/configs/service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 8080
      # appProtocol: HTTP
  externalIPs:
    - 192.168.56.110
