p2/configs/service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 8080
      # appProtocol: HTTP
  externalIPs:
    - 192.168.56.110
