p2/configs/service-app3.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 8080
      # appProtocol: HTTP
  externalIPs:
    - 192.168.56.110
