p2/configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-ingress
spec:
  defaultBackend:
    service:
      name: app3-service
      port:
        number: 80
  rules:
    - host: app1.com
      http:
        paths:
          - backend:
              service:
                name: app1-service
                port:
                  number: 80
                  
            pathType: Prefix
            path: /
    - host: app2.com
      http:
        paths:
          - backend:
              service:
                name: app2-service
                port:
                  number: 80
            pathType: Prefix
            path: /
